--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^16.1.0",
     "@material/dialog": "^15.0.0-canary.b994146f6.0",
     "bootstrap": "^5.3.1",
+    "ng-image-slider": "^7.0.0",
+    "ngx-awesome-uploader": "^16.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
